--- a/styles/styles.css
+++ b/styles/styles.css
@@ -437,7 +437,7 @@ nav {
 	padding: 0;
 	row-gap: 48px;
 }
-portfolio-card-item-list
+/* portfolio-card-item-list */
 .portfolio-title h2 {
 	margin-bottom: 8px;
 }
@@ -449,7 +449,8 @@ portfolio-card-item-list
 	padding-bottom: 32px;
 }
 
-.portfolios:hover,
+
+.portfolios:hover, 
 .portfolios:focus {
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
