--- a/styles/styles.css
+++ b/styles/styles.css
@@ -450,13 +450,21 @@ nav {
 }
 
 
-.portfolios:hover, 
+/* .portfolios:hover, 
 .portfolios:focus {
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+} */
+
 .portfolio-card-item-list:hover .portfolio-card-overlay {
 	transform: translateY(0);
 }
+
+.portfolio-card-item-list:hover, .portfolio-card-item-list:focus {
+	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+
+
 .portfolios {
 	display: block;
 }
